# tutto

./: README.md  main.py  pyproject.toml  run_strategy_tests.py
tests/: __init__.py  test_strategy_comparison.py
tutto/cli/: __main__.py  interface.py
tutto/core/: cards.py  dice.py  game.py  game_state.py  player.py  scoring.py
tutto/simulation/: __init__.py  game_simulator.py  game_theoretic_strategy.py  simulator.py  strategy_registry.py
tutto/simulation/strategies/: __init__.py  base.py  conservative.py  greedy.py  optimal.py  probability_threshold.py
