[project]
name = "tutto"
version = "0.1.0"
description = "A dice game simulation engine with probability analysis"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.9",
]

[project.scripts]
tutto = "tutto.cli:main"
